--- a/src/components/BurgerMenu/BurgerMenu.css
+++ b/src/components/BurgerMenu/BurgerMenu.css
@@ -55,7 +55,7 @@
     flex-direction: column;
     align-items:center;
     margin-top: 105px;
-    margin-bottom: 621px;
+    margin-bottom: 321px;
 }
 
 .burger-menu__list {
@@ -70,7 +70,7 @@
     line-height: 22px;
 }
 
-.burger-menu__link:hover {
+.burger-menu__link_active {
     border-bottom: 1px solid #000000;
     padding-bottom: 7px;
 }
