--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -28,6 +28,9 @@
     font-weight: 400;
     font-size: 10px;
     line-height: 12px;
+    display: flex;
+    flex-direction: column;
+    margin-top: 10px;
 }
 
 .login__input {
@@ -40,7 +43,7 @@
     width: 396px;
     background-color: #FFFFFF;
     margin-top: 5px;
-    margin-bottom: 35px;
+    margin-bottom: 10px;
     border-top: 0;
     border-left: 0;
     border-right: 0;
@@ -49,6 +52,17 @@
 
 .login__input:focus {
     border-bottom: 1px solid #2BE080;
+}
+
+.login__error {
+    line-height: 12px;
+    font-size: 10px;
+    color: #FF3055;
+    visibility: visible;
+}
+
+.login__error_hidden {
+    visibility: hidden;
 }
 
 .login__submit-button {
@@ -65,6 +79,12 @@
     line-height: 17px;
     padding: 0;
     color: #FFFFFF;
+}
+
+.login__submit-button_disable {
+    cursor: default;
+    background: #F8F8F8;
+    color: #C2C2C2;
 }
 
 .login__signin {
