--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -12,6 +12,17 @@
     gap: 30px 24px;
 }
 
+.movies__card-list_err {
+    margin: 0;
+    color: red;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 16px;
+}
+
 @media screen and (max-width: 997px) {
     .movies__card-list {
         grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
