--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -19,11 +19,9 @@
 }
 
 .profile__container {
-    display: flex;
-    justify-content: space-between;
+    width: 410px;
     border-bottom: 1px solid #E8E8E8;
     margin-top: 17px;
-    width: 410px;
 }
 
 .profile__container:last-of-type {
@@ -34,7 +32,9 @@
     font-weight: 500;
     font-size: 11px;
     line-height: 13px;
-    margin-bottom: 16px;
+    margin-bottom: 10px;
+    width: 100%;
+    display:flex;
 }
 
 .profile__input {
@@ -43,10 +43,61 @@
     line-height: 13px;
     border: none;
     padding: 0;
-    margin-bottom: 16px;
     outline: none;
+    margin-left: auto;
     text-align: end;
-    max-width: 122px;
+    background-color: white;
+}
+
+.profile__error {
+    line-height: 12px;
+    font-size: 10px;
+    color: #FF3055;
+    display: flex;
+    justify-content: flex-end;
+    margin-bottom: 10px;
+    visibility: visible;
+}
+
+.profile__error_hidden {
+    visibility: hidden;
+    display: flex;
+    margin-bottom: 10px;
+    line-height: 12px;
+    font-size: 10px;
+    justify-content: flex-end;
+}
+
+.profile__button-save {
+    margin-top: 204px;
+    width: 410px;
+    height: 45px;
+    cursor: pointer;
+    background: #2BE080;
+    border-radius: 3px;
+    outline: none;
+    border: none;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 17px;
+    padding: 0;
+    color: #FFFFFF;
+}
+    
+.profile__button-save_disable {
+    cursor: default;
+    background: #F8F8F8;
+    color: #C2C2C2;
+    margin-top: 204px;
+    width: 410px;
+    height: 45px;
+    border-radius: 3px;
+    outline: none;
+    border: none;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 17px;
+    padding: 0;
 }
 
 .profile__submit-button {
@@ -61,6 +112,10 @@
     line-height: 16px;
 }
 
+.profile__submit-button_hidden {
+    visibility: hidden;
+}
+
 .profile__signout {
     color: #EE3465;
     text-decoration: none;
@@ -68,6 +123,10 @@
     font-weight: 500;
     font-size: 13px;
     line-height: 16px;
+    border: 0;
+    outline: 0;
+    background-color: transparent;
+    cursor: pointer;
 }
 
 .profile__signout:hover {
@@ -91,6 +150,10 @@
 
     .profile__submit-button {
         margin-top: 194px;
+    }
+
+    .profile__button-save {
+        width: 396px;
     }
 }    
 
@@ -117,5 +180,9 @@
     .rofile__signout {
         font-size: 12px;
         line-height: 15px;
+    }
+
+    .profile__button-save {
+        width: 260px;
     }
 }
