--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -21,7 +21,6 @@
     font-size: 24px;
     line-height: 29px;
     margin: 0 0 40px 0;
-    
 }
 
 .register__label {
@@ -29,6 +28,9 @@
     font-weight: 400;
     font-size: 10px;
     line-height: 12px;
+    display: flex;
+    flex-direction: column;
+    margin-top: 10px;
 }
 
 .register__input {
@@ -41,7 +43,7 @@
     width: 396px;
     background-color: #FFFFFF;
     margin-top: 5px;
-    margin-bottom: 24px;
+    margin-bottom: 10px;
     border-top: 0;
     border-left: 0;
     border-right: 0;
@@ -66,6 +68,32 @@
     line-height: 17px;
     padding: 0;
     color: #FFFFFF;
+}
+
+.register__submit-button_disable {
+    background: #F8F8F8;
+    color: #C2C2C2;
+    cursor: default;
+}
+
+.register__error {
+    line-height: 12px;
+    font-size: 10px;
+    color: #FF3055;
+    visibility: visible;
+}
+
+.register__error-text{
+    line-height: 12px;
+    font-size: 10px;
+    color: #FF3055;
+    display: block;
+    text-align: center;
+    margin-bottom: 0;
+}
+
+.register__error_hidden {
+    visibility: hidden;
 }
 
 .register__signup {
