--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -2,15 +2,13 @@
     box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.08);
     background-color: #FDFDFD;
     position: relative;
-    width: 100%;
-    min-height: 281px;
+    height: 271px;
 }
 
 .movie__title {
     font-weight: 500;
     font-size: 15px;
     line-height: 18px;
-    padding: 14px 0 9px 14px;
     margin: 0;
     max-width: 78%;
 }
@@ -21,7 +19,7 @@
     line-height: 13px;
     color: #A0A0A0;
     margin: 0;
-    padding: 0 0 14px 14px;
+    padding-top: 9px;
 }
 
 .movie__save-button {
@@ -73,5 +71,10 @@
     object-fit: cover;
     width: 100%;
     height: 203px;
+    display: block;
 }
 
+.movie__description { 
+    margin: 14px auto 14px 14px;
+    height: 54px;
+}
