--- a/src/components/NotFound/NotFound.css
+++ b/src/components/NotFound/NotFound.css
@@ -27,6 +27,9 @@
     font-size: 14px;
     line-height: 17px;
     text-decoration: none;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
 }
 
 @media screen and (max-width: 768px) {
